welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
	avance()
              ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
	gauche()
              ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
} else if(getCouleurSol()==Color.green && estFaceMur()==true)  {
       ^