welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
if (getCouleurSol()==Color.green && estFaceMur()==false){
	baisseBrosse()
	leveBrosse()
	avance()
} else if(getCouleurSol()==Color.green && estFaceMur()==true)  {
	baisseBrosse()
	leveBrosse()
	gauche()
}
    
    
    
    // Write your code here
}        
